--- a/helpers/_debug.scss
+++ b/helpers/_debug.scss
@@ -26,7 +26,8 @@
 	background-size: 100% $base-line-px; // last value should be your vertical rhytm!
 
 	// Outline all elements
-    * { 
+	body { opacity: .8; }
+    body * { 
         background: rgba(250,150,150,0.075);
         outline: 1px solid rgba(255,255,255,0.25); 
     } 
